# recurrence-microstates-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
src/: bindings.cpp  rma_py.cpp
src/cfg/: enums.h
src/rma/: distribution.cpp  distribution.h  histogram.cpp  histogram.h  recurrence.h  sampling.cpp  sampling.h  shape.cpp  shape.h
src/rma/sampling/: full.cpp  full.h  random.cpp  random.h
src/rma/shape/: diagonal.cpp  diagonal.h  square.cpp  square.h  triangle.cpp  triangle.h
src/rqa/: det.h  disorder.h  entropy.h  lam.h  rr.h
src/utils/: distances.h  metric.h
test/: base.py  basic.py  graph.jl  graph_benchmark.jl  main.jl  performance.jl  performance.py  systems.jl
test/no auto/: benchmark.ipynb
